# keplar_vk

./: CMakeLists.txt  README.md  main.cpp
core/: config.hpp  keplar_app.cpp  keplar_app.hpp  keplar_config.hpp
graphics/: asset_io.hpp  camera.cpp  camera.hpp  common.hpp  external_libs.cpp  frame_limiter.cpp  frame_limiter.hpp  gltf_model.cpp  gltf_model.hpp  imgui_layer.cpp  imgui_layer.hpp  math3d.hpp  msaa_target.hpp  renderer.hpp  texture.cpp  texture.hpp
platform/: event_listener.hpp  event_manager.cpp  event_manager.hpp  platform.hpp  platform_factory.cpp  platform_factory.hpp  win32_platform.cpp  win32_platform.hpp
platform/windows/: keplar.rc  resource.hpp  win32_platform.cpp  win32_platform.hpp
renderer/: camera.cpp  camera.hpp  msaa_target.cpp  msaa_target.hpp  renderer.cpp  renderer.hpp  shader_structs.hpp
resources/shaders/: passthrough.vert.spv
resources/shaders/gltfloader/: gltf_demo.frag.spv  gltf_demo.vert.spv
resources/shaders/pbr/: pbr.frag.spv  pbr.vert.spv
resources/shaders/texture/: texture.frag.spv  texture.vert.spv
resources/shaders/triangle/: triangle.frag.spv  triangle.vert.spv
samples/PBR/: main.cpp  pbr.cpp  pbr.hpp  shader_structs.hpp
samples/gltfloader/: gltfloader.cpp  gltfloader.hpp  main.cpp  shader_structs.hpp
samples/texture/: main.cpp  shader_structs.hpp  texture_sample.cpp  texture_sample.hpp
samples/triangle/: main.cpp  triangle.cpp  triangle.hpp
shaders/: passthrough.frag
shaders/gltfloader/: gltf_demo.frag  gltf_demo.vert
shaders/pbr/: pbr.frag  pbr.vert
shaders/texture/: texture.frag  texture.vert
shaders/triangle/: triangle.vert
utils/: frame_pacer.cpp  frame_pacer.hpp  logger.cpp  logger.hpp  thread_pool.cpp  thread_pool.hpp  time.cpp  time.hpp
vulkan/: vk_config.hpp  vk_utils.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_command_buffer.cpp  vulkan_command_buffer.hpp  vulkan_command_pool.cpp  vulkan_command_pool.hpp  vulkan_config.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_descriptor_pool.cpp  vulkan_descriptor_pool.hpp  vulkan_descriptor_set_layout.cpp  vulkan_descriptor_set_layout.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_fence.cpp  vulkan_fence.hpp  vulkan_framebuffer.cpp  vulkan_framebuffer.hpp  vulkan_instance.cpp  vulkan_instance.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_render_pass.cpp  vulkan_render_pass.hpp  vulkan_samplers.cpp  vulkan_samplers.hpp  vulkan_semaphore.cpp  vulkan_semaphore.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_surface.cpp  vulkan_surface.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_utils.hpp
vulkan/buffer/: vertex_buffer.cpp  vertex_buffer.hpp
